[gd_scene load_steps=23 format=3 uid="uid://cf0f3upr24a8v"]

[ext_resource type="Script" path="res://interface/PuaseMenu/pause_menu.gd" id="1_8neq4"]
[ext_resource type="Theme" uid="uid://dv0ieswgn5fdv" path="res://interface/theme/default_theme.tres" id="2_n5i13"]
[ext_resource type="Texture2D" uid="uid://d23xqanvwsa82" path="res://Kings and Pigs/Sprites/Kings and Pigs.png" id="2_uvmsx"]
[ext_resource type="Texture2D" uid="uid://b2h3cxrrdwkcf" path="res://Kings and Pigs/Sprites/14-TileSets/Terrain (32x32).png" id="4_lmbql"]
[ext_resource type="Texture2D" uid="uid://ckh4e430kj1cm" path="res://Kings and Pigs/Sprites/14-TileSets/Decorations (32x32).png" id="5_3b8mw"]
[ext_resource type="Texture2D" uid="uid://l3dcf64fimvs" path="res://Kings and Pigs/Sprites/02-King Pig/Dead (38x28).png" id="7_43gys"]
[ext_resource type="Texture2D" uid="uid://b2vbde1yq0wph" path="res://Kings and Pigs/Sprites/01-King Human/Idle (78x58).png" id="7_tcgbx"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2l8af"]
texture = ExtResource("5_3b8mw")
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
2:3/0 = 0
3:3/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
2:5/0 = 0
3:5/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7tb7u"]
texture = ExtResource("4_lmbql")
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
10:2/0 = 0
11:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
32:2/0 = 0
33:2/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
10:3/0 = 0
11:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
32:3/0 = 0
33:3/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
10:4/0 = 0
11:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
32:4/0 = 0
33:4/0 = 0
34:4/0 = 0
35:4/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
10:5/0 = 0
11:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
32:5/0 = 0
33:5/0 = 0
34:5/0 = 0
35:5/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
10:6/0 = 0
11:6/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
10:7/0 = 0
11:7/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
32:8/0 = 0
33:8/0 = 0
34:8/0 = 0
35:8/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
32:9/0 = 0
33:9/0 = 0
34:9/0 = 0
35:9/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
10:10/0 = 0
11:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
26:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
32:10/0 = 0
33:10/0 = 0
34:10/0 = 0
35:10/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
10:11/0 = 0
11:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
26:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
32:11/0 = 0
33:11/0 = 0
34:11/0 = 0
35:11/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
10:14/0 = 0
11:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
32:14/0 = 0
33:14/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
10:15/0 = 0
11:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
32:15/0 = 0
33:15/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
10:16/0 = 0
11:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
20:16/0 = 0
21:16/0 = 0
22:16/0 = 0
23:16/0 = 0
26:16/0 = 0
27:16/0 = 0
28:16/0 = 0
29:16/0 = 0
32:16/0 = 0
33:16/0 = 0
34:16/0 = 0
35:16/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
10:17/0 = 0
11:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
23:17/0 = 0
26:17/0 = 0
27:17/0 = 0
28:17/0 = 0
29:17/0 = 0
32:17/0 = 0
33:17/0 = 0
34:17/0 = 0
35:17/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
10:18/0 = 0
11:18/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
10:19/0 = 0
11:19/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
20:20/0 = 0
21:20/0 = 0
22:20/0 = 0
23:20/0 = 0
26:20/0 = 0
27:20/0 = 0
28:20/0 = 0
29:20/0 = 0
32:20/0 = 0
33:20/0 = 0
34:20/0 = 0
35:20/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
20:21/0 = 0
21:21/0 = 0
22:21/0 = 0
23:21/0 = 0
26:21/0 = 0
27:21/0 = 0
28:21/0 = 0
29:21/0 = 0
32:21/0 = 0
33:21/0 = 0
34:21/0 = 0
35:21/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
10:22/0 = 0
11:22/0 = 0
14:22/0 = 0
15:22/0 = 0
16:22/0 = 0
17:22/0 = 0
20:22/0 = 0
21:22/0 = 0
22:22/0 = 0
23:22/0 = 0
26:22/0 = 0
27:22/0 = 0
28:22/0 = 0
29:22/0 = 0
32:22/0 = 0
33:22/0 = 0
34:22/0 = 0
35:22/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
10:23/0 = 0
11:23/0 = 0
14:23/0 = 0
15:23/0 = 0
16:23/0 = 0
17:23/0 = 0
20:23/0 = 0
21:23/0 = 0
22:23/0 = 0
23:23/0 = 0
26:23/0 = 0
27:23/0 = 0
28:23/0 = 0
29:23/0 = 0
32:23/0 = 0
33:23/0 = 0
34:23/0 = 0
35:23/0 = 0

[sub_resource type="TileSet" id="TileSet_hvyp1"]
sources/0 = SubResource("TileSetAtlasSource_2l8af")
sources/1 = SubResource("TileSetAtlasSource_7tb7u")

[sub_resource type="Animation" id="Animation_bbnei"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Idle(78x58):frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2cmms"]
resource_name = "king_idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Idle(78x58):frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_bc668"]
resource_name = "pig_dead_idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wmgeh"]
_data = {
"RESET": SubResource("Animation_bbnei"),
"king_idle": SubResource("Animation_2cmms"),
"pig_dead_idle": SubResource("Animation_bc668")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3ra8q"]
animation = &"pig_dead_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qstet"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_dw4ya"]
states/pig_dead_idle/node = SubResource("AnimationNodeAnimation_3ra8q")
states/pig_dead_idle/position = Vector2(368, 50.5)
transitions = ["Start", "pig_dead_idle", SubResource("AnimationNodeStateMachineTransition_qstet")]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_sn0gs"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mlklq"]
animation = &"king_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_e46vh"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_61fr2"]
states/king_idle/node = SubResource("AnimationNodeAnimation_mlklq")
states/king_idle/position = Vector2(349, 91)
transitions = ["Start", "king_idle", SubResource("AnimationNodeStateMachineTransition_e46vh")]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_7sa6h"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8neq4")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -743.5
offset_right = 743.5
offset_bottom = 444.0
grow_horizontal = 2
texture = ExtResource("2_uvmsx")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14902, 0.14902, 0.14902, 0.47451)

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -221.5
offset_right = 221.5
offset_bottom = 102.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 72
text = "PIGLY WIGLY
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -207.5
offset_top = -140.5
offset_right = 207.5
offset_bottom = 140.5
grow_horizontal = 2
grow_vertical = 2

[node name="NewGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_n5i13")
text = "New Game"

[node name="Options" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_n5i13")
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_n5i13")
text = "Quit"

[node name="MainMenu" type="TileMap" parent="."]
scale = Vector2(10, 10)
tile_set = SubResource("TileSet_hvyp1")
format = 2
layer_0/name = "fill_mainmeny"
layer_0/tile_data = PackedInt32Array(524299, 196609, 15, 458763, 196609, 18, 393227, 196609, 17, 327691, 196609, 16, 262155, 196609, 15, 196619, 196609, 18, 131083, 196609, 17, 65547, 196609, 16, 11, 196609, 15, 10, 393217, 15, 9, 327681, 15, 8, 262145, 15, 7, 196609, 15, 6, 393217, 15, 5, 327681, 15, 4, 262145, 15, 3, 196609, 15, 2, 393217, 15, 1, 327681, 15, 0, 262145, 15, 65536, 262145, 16, 131072, 262145, 17, 196608, 262145, 18, 262144, 262145, 15, 327680, 262145, 16, 393216, 262145, 17, 458752, 262145, 18, 524288, 262145, 15, 589824, 262145, 16, 655360, 262145, 17, 720896, 262145, 18, 720897, 327681, 18, 655361, 327681, 17, 589825, 327681, 16, 524289, 327681, 15, 458753, 327681, 18, 393217, 327681, 17, 327681, 327681, 16, 262145, 327681, 15, 196609, 327681, 18, 131073, 327681, 17, 65537, 327681, 16, 65538, 393217, 16, 131074, 393217, 17, 196610, 393217, 18, 262146, 393217, 15, 327682, 393217, 16, 393218, 393217, 17, 458754, 393217, 18, 524290, 393217, 15, 589826, 393217, 16, 655362, 393217, 17, 720898, 393217, 18, 720899, 196609, 18, 655363, 196609, 17, 589827, 196609, 16, 524291, 196609, 15, 458755, 196609, 18, 393219, 196609, 17, 327683, 196609, 16, 262147, 196609, 15, 196611, 196609, 18, 131075, 196609, 17, 65539, 196609, 16, 65540, 262145, 16, 131076, 262145, 17, 196612, 262145, 18, 262148, 262145, 15, 327684, 262145, 16, 393220, 262145, 17, 458756, 262145, 18, 524292, 262145, 15, 589828, 262145, 16, 655364, 262145, 17, 720900, 262145, 18, 720901, 327681, 18, 655365, 327681, 17, 589829, 327681, 16, 524293, 327681, 15, 458757, 327681, 18, 393221, 327681, 17, 327685, 327681, 16, 262149, 327681, 15, 196613, 327681, 18, 131077, 327681, 17, 65541, 327681, 16, 65542, 393217, 16, 131078, 393217, 17, 196614, 393217, 18, 262150, 393217, 15, 327686, 393217, 16, 393222, 393217, 17, 458758, 393217, 18, 524294, 393217, 15, 589830, 393217, 16, 655366, 393217, 17, 720902, 393217, 18, 720903, 196609, 18, 655367, 196609, 17, 589831, 196609, 16, 524295, 196609, 15, 458759, 196609, 18, 393223, 196609, 17, 327687, 196609, 16, 262151, 196609, 15, 196615, 196609, 18, 131079, 196609, 17, 65543, 196609, 16, 65544, 262145, 16, 131080, 262145, 17, 196616, 262145, 18, 262152, 262145, 15, 327688, 262145, 16, 393224, 262145, 17, 458760, 262145, 18, 524296, 262145, 15, 589832, 262145, 16, 655368, 262145, 17, 720904, 262145, 18, 720905, 327681, 18, 655369, 327681, 17, 589833, 327681, 16, 524297, 327681, 15, 458761, 327681, 18, 393225, 327681, 17, 327689, 327681, 16, 262153, 327681, 15, 196617, 327681, 18, 131081, 327681, 17, 65545, 327681, 16, 65546, 393217, 16, 131082, 393217, 17, 196618, 393217, 18, 262154, 393217, 15, 327690, 393217, 16, 393226, 393217, 17, 458762, 393217, 18, 524298, 393217, 15, 589834, 393217, 16, 655370, 393217, 17, 720906, 393217, 18, 720907, 196609, 18, 655371, 196609, 17, 589835, 196609, 16, 589836, 262145, 16, 524300, 262145, 15, 458764, 262145, 18, 393228, 262145, 17, 327692, 262145, 16, 262156, 262145, 15, 196620, 262145, 18, 131084, 262145, 17, 65548, 262145, 16, 12, 262145, 15, 13, 327681, 15, 65549, 327681, 16, 131085, 327681, 17, 196621, 327681, 18, 262157, 327681, 15, 327693, 327681, 16, 393229, 327681, 17, 458765, 327681, 18, 524301, 327681, 15, 589837, 327681, 16, 655373, 327681, 17, 655372, 262145, 17, 720908, 262145, 18, 720909, 327681, 18, 720910, 393217, 18, 655374, 393217, 17, 589838, 393217, 16, 524302, 393217, 15, 458766, 393217, 18, 393230, 393217, 17, 327694, 393217, 16, 262158, 393217, 15, 196622, 393217, 18, 131086, 393217, 17, 65550, 393217, 16, 14, 393217, 15, 15, 196609, 15, 65551, 196609, 16, 131087, 196609, 17, 196623, 196609, 18, 262159, 196609, 15, 327695, 196609, 16, 393231, 196609, 17, 458767, 196609, 18, 524303, 196609, 15, 589839, 196609, 16, 655375, 196609, 17, 720911, 196609, 18, 720912, 262145, 18, 655376, 262145, 17, 589840, 262145, 16, 524304, 262145, 15, 458768, 262145, 18, 393232, 262145, 17, 327696, 262145, 16, 262160, 262145, 15, 196624, 262145, 18, 131088, 262145, 17, 65552, 262145, 16, 16, 262145, 15, 17, 327681, 15, 65553, 327681, 16, 131089, 327681, 17, 196625, 327681, 18, 262161, 327681, 15, 327697, 327681, 16, 393233, 327681, 17, 458769, 327681, 18, 524305, 327681, 15, 589841, 327681, 16, 655377, 327681, 17, 720913, 327681, 18, 720914, 393217, 18, 655378, 393217, 17, 589842, 393217, 16, 524306, 393217, 15, 458770, 393217, 18, 393234, 393217, 17, 327698, 393217, 16, 262162, 393217, 15, 196626, 393217, 18, 131090, 393217, 17, 65554, 393217, 16, 18, 393217, 15, 19, 196609, 15, 65555, 196609, 16, 131091, 196609, 17, 196627, 196609, 18, 262163, 196609, 15, 327699, 196609, 16, 393235, 196609, 17, 458771, 196609, 18, 524307, 196609, 15, 589843, 196609, 16, 655379, 196609, 17, 720915, 196609, 18, 720916, 262145, 18, 655380, 262145, 17, 589844, 262145, 16, 524308, 262145, 15, 458772, 262145, 18, 393236, 262145, 17, 327700, 262145, 16, 262164, 262145, 15, 196628, 262145, 18, 131092, 262145, 17, 65556, 262145, 16, 20, 262145, 15, 21, 327681, 15, 65557, 327681, 16, 131093, 327681, 17, 196629, 327681, 18, 262165, 327681, 15, 327701, 327681, 16, 393237, 327681, 17, 458773, 327681, 18, 524309, 327681, 15, 589845, 327681, 16, 655381, 327681, 17, 720917, 327681, 18)
layer_1/name = "deco_mainmenu"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(196624, 262144, 6, 262160, 262144, 7, 327696, 262144, 8, 196625, 327680, 6, 262161, 327680, 7, 327697, 327680, 8, 196626, 393216, 6, 262162, 393216, 7, 327698, 393216, 8, 196612, 262144, 6, 262148, 262144, 7, 327684, 262144, 8, 196613, 327680, 6, 262149, 327680, 7, 327685, 327680, 8, 196614, 393216, 6, 262150, 393216, 7, 327686, 393216, 8, 65543, 131072, 2, 131079, 131072, 3, 196615, 131072, 4, 262151, 131072, 5, 327687, 131072, 6, 393223, 131072, 7, 458759, 131072, 8, 524295, 131072, 9, 65544, 196608, 2, 131080, 196608, 3, 196616, 196608, 4, 262152, 196608, 5, 327688, 196608, 6, 393224, 196608, 7, 458760, 196608, 8, 524296, 196608, 9, 65550, 131072, 2, 131086, 131072, 3, 196622, 131072, 4, 262158, 131072, 5, 327694, 131072, 6, 393230, 131072, 7, 458766, 131072, 8, 524302, 131072, 9, 65551, 196608, 2, 131087, 196608, 3, 196623, 196608, 4, 262159, 196608, 5, 327695, 196608, 6, 393231, 196608, 7, 458767, 196608, 8, 524303, 196608, 9, 589838, 262144, 4, 589839, 327680, 4, 589840, 393216, 4, 589841, 458752, 4, 589842, 524288, 4, 589843, 589824, 4)
layer_2/name = "bg_mainmenu"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array(65537, 1114113, 5, 131073, 327681, 6, 196609, 327681, 7, 65538, 917505, 3, 131074, 393217, 6, 196610, 393217, 7, 65539, 983041, 3, 131075, 458753, 6, 196611, 458753, 7, 0, 1048577, 4, 65536, 1048577, 5, 1, 1114113, 4, 3, 983041, 2, 196608, 1507329, 5, 131072, 1376257, 4, 2, 917505, 2, 262144, 1507329, 8, 327680, 1507329, 8, 393216, 983041, 4, 393217, 327681, 2, 393218, 393217, 2, 393219, 458753, 2, 458753, 327681, 3, 458754, 393217, 3, 458755, 458753, 3, 524289, 327681, 4, 589825, 1376257, 8, 655361, 393217, 4, 524290, 393217, 4, 589826, 1376257, 5, 655362, 458753, 4, 524291, 458753, 4, 589827, 458753, 7, 458752, 196609, 3, 524288, 1376257, 2, 589824, 1703937, 5, 655360, 327681, 4, 720897, 393217, 5, 720898, 983041, 4, 720899, 917505, 8, 720900, 983041, 8, 720901, 1048577, 8, 720902, 1114113, 8, 720903, 917505, 8, 720904, 983041, 8, 720905, 1048577, 8, 720906, 1114113, 8, 720907, 917505, 8, 720908, 983041, 8, 720909, 1048577, 8, 720910, 1114113, 8, 720911, 917505, 8, 720912, 983041, 8, 720913, 917505, 8, 720914, 983041, 8, 720915, 1048577, 8, 720916, 1310721, 2, 720917, 1376257, 3, 458772, 655361, 3, 524308, 655361, 4, 589844, 655361, 5, 655380, 655361, 6, 327700, 1310721, 4, 393236, 1048577, 3, 589845, 1376257, 2, 655381, 1376257, 2, 524309, 1900545, 2, 458773, 1114113, 4, 393237, 1114113, 3, 262165, 262145, 4, 327701, 1376257, 4, 327699, 131073, 6, 393235, 131073, 7, 131091, 131073, 5, 196627, 131073, 4, 262163, 131073, 5, 131092, 196609, 5, 196628, 196609, 4, 262164, 1900545, 5, 19, 1048577, 2, 65555, 1310721, 5, 20, 1114113, 2, 65556, 1114113, 3, 21, 262145, 4, 65557, 262145, 5, 131093, 262145, 4, 196629, 262145, 5, 15, 327681, 6, 65551, 196609, 7, 16, 262145, 6, 65552, 262145, 7, 17, 327681, 6, 65553, 327681, 7, 18, 262145, 6, 65554, 393217, 7, 13, 1376257, 4, 14, 262145, 6, 65548, 196609, 7, 65549, 262145, 7, 65550, 327681, 7, 10, 1376257, 4, 11, 262145, 6, 12, 1310721, 4, 9, 1376257, 4, 65544, 917505, 11, 65545, 983041, 11, 65546, 1048577, 11, 65547, 1114113, 11, 720896, 327681, 4, 65540, 917505, 11, 65541, 983041, 11, 65542, 1048577, 11, 65543, 1114113, 11, 4, 1048577, 2, 5, 262145, 6, 6, 1310721, 4, 7, 1376257, 4, 8, 1310721, 4)

[node name="Dead(38x28)" type="Sprite2D" parent="."]
position = Vector2(955, 1343)
scale = Vector2(30, 30)
texture = ExtResource("7_43gys")
hframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Dead(38x28)")
libraries = {
"": SubResource("AnimationLibrary_wmgeh")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_dw4ya")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_sn0gs")

[node name="Idle(78x58)" type="Sprite2D" parent="."]
position = Vector2(2716, 1228)
scale = Vector2(15, 15)
texture = ExtResource("7_tcgbx")
flip_h = true
hframes = 11

[node name="AnimationTree2" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_61fr2")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_7sa6h")

[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
